WIP:  custom logger
