# handlers/constants.go
@@ -5,15 +5,16 @@ type ErrorMessage string
 type HttpMethod string
 
 const (
-	USER     EntityType = "user"
-	EMAIL    EntityType = "email"
-	CLIENT   EntityType = "client"
-	SCOPE    EntityType = "scope"
-	STATE    EntityType = "state"
-	PASSWORD EntityType = "password"
-	SECRET   EntityType = "secret"
-	ROLE     EntityType = "role"
-	ID       EntityType = "id"
+	USER         EntityType = "user"
+	EMAIL        EntityType = "email"
+	CLIENT       EntityType = "client"
+	SCOPE        EntityType = "scope"
+	STATE        EntityType = "state"
+	PASSWORD     EntityType = "password"
+	SECRET       EntityType = "secret"
+	ROLE         EntityType = "role"
+	ID           EntityType = "id"
+	REDIRECT_URL EntityType = "redirectUrl"
 
 	ERR_CLIENT_ID   ErrorMessage = "Invalid clientId!"
 	ERR_CREDENTIALS ErrorMessage = "Invalid email or password!"
